# Prompt-Kitcha

./: .gitignore  CLAUDE.md  LICENSE  README.md  find_pdf.py  image-prompt.html  package-lock.json  package.json  pill.html  popup.html  settings.html  tailwind.config.js  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
.claude/: settings.local.json
.github/workflows/: build.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: clipboard.rs  config.rs  credentials.rs  cursor.rs  foreground.rs  hotkey.rs  keystroke.rs  lib.rs  main.rs  optimizer.rs  tray.rs  watcher.rs
src-tauri/src/providers/: anthropic.rs  mod.rs  ollama.rs  openai.rs  openrouter.rs
src/components/: IntentBadge.tsx
src/lib/: imagePromptTechniques.ts  intents.ts  ipc.ts  promptTechniques.ts
src/styles/: globals.css
src/windows/: ImagePrompt.tsx  Pill.tsx  Popup.tsx  Settings.tsx  image-prompt-entry.tsx  pill-entry.tsx  popup-entry.tsx  settings-entry.tsx
