[package]
name = "promptkitcha"
version = "0.1.0"
description = "AI-powered prompt optimizer for Windows"
authors = ["PromptKitcha contributors"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "promptwriter_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.1", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2.2"
tauri-plugin-clipboard-manager = "2.2"
tauri-plugin-store = "2.2"
tauri-plugin-opener = "2.2"
tauri-plugin-dialog = "2.2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros"] }
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }
futures-util = "0.3"
eventsource-stream = "0.2"

anyhow = "1"
async-trait = "0.1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

keyring = { version = "3", features = ["windows-native"] }
toml = "0.8"
dirs = "5"
parking_lot = "0.12"
once_cell = "1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_WindowsAndMessaging",
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_System_Threading",
] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
